// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AboutBuildModal should match snapshot for cloud edition 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal cloud"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[MockFunction]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "MatterFOSS",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MatterFOSSLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          <strong>
            MatterFOSS
             
            <MemoizedFormattedMessage
              defaultMessage="Cloud"
              id="about.cloudEdition"
            />
          </strong>
        </h3>
        <p
          className="subtitle"
        >
          <MemoizedFormattedMessage
            defaultMessage="High trust messaging for the enterprise"
            id="about.enterpriseEditionSst"
          />
        </p>
        <div
          className="description"
        >
          <div>
            <MemoizedFormattedMessage
              defaultMessage="MatterFOSS Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               3.6.2
            </span>
          </div>
        </div>
        <div
          className="form-group"
        >
          <MemoizedFormattedMessage
            defaultMessage="Licensed to:"
            id="about.licensed"
          />
           MatterFOSS Inc
        </div>
        <div
          className="about-footer"
        >
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="MatterFOSS is made possible by the open source software used in our [server](!https://github.com/matterfoss/matterfoss-server/blob/master/NOTICE.txt), [desktop](!https://github.com/matterfoss/desktop/blob/master/NOTICE.txt) and [mobile](!https://github.com/matterfoss/matterfoss-mobile/blob/master/NOTICE.txt) apps."
            id="about.notice"
          />
          <div
            className="copy-right"
          >
            <MemoizedFormattedMessage
              defaultMessage="Copyright 2015 - {currentYear} MatterFOSS, Inc. All rights reserved"
              id="about.copyright"
              values={
                Object {
                  "currentYear": 2017,
                }
              }
            />
          </div>
        </div>
      </div>
      <div />
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        abcdef1234567890
        <br />
        <MemoizedFormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        0123456789abcdef
        <br />
        <MemoizedFormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
      </p>
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should match snapshot for enterprise edition 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "MatterFOSS",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MatterFOSSLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          <strong>
            MatterFOSS
             
            <MemoizedFormattedMessage
              defaultMessage="Enterprise Edition"
              id="about.enterpriseEditione1"
            />
          </strong>
        </h3>
        <p
          className="about-modal__subtitle pb-2"
        >
          <MemoizedFormattedMessage
            defaultMessage="Modern communication from behind your firewall."
            id="about.enterpriseEditionSt"
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <MemoizedFormattedMessage
              defaultMessage="MatterFOSS Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               3.6.2
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Database Schema Version:"
              id="about.dbversion"
            />
            <span
              id="dbversionString"
            >
               77
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Database:"
              id="about.database"
            />
             Postgres
          </div>
        </div>
        <div
          className="form-group"
        >
          <MemoizedFormattedMessage
            defaultMessage="Licensed to:"
            id="about.licensed"
          />
          <Nbsp />
          MatterFOSS Inc
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <MemoizedFormattedMessage
          defaultMessage="Learn more about Enterprise Edition at "
          id="about.enterpriseEditionLearn"
        />
        <a
          href="https://matterfoss.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          matterfoss.com
        </a>
      </div>
      <div
        className="form-group"
      >
        <div
          className="about-modal__copyright"
        >
          <MemoizedFormattedMessage
            defaultMessage="Copyright 2015 - {currentYear} MatterFOSS, Inc. All rights reserved"
            id="about.copyright"
            values={
              Object {
                "currentYear": 2017,
              }
            }
          />
        </div>
        <div
          className="about-modal__links"
        >
          <a
            href="https://matterfoss.com/terms-of-use/"
            id="tosLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <MemoizedFormattedMessage
              defaultMessage="Terms of Use"
              id="about.tos"
            />
          </a>
           - 
          <a
            href="https://matterfoss.com/privacy-policy/"
            id="privacyLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <MemoizedFormattedMessage
              defaultMessage="Privacy Policy"
              id="about.privacy"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="about-modal__notice form-group pt-3"
    >
      <p>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="MatterFOSS is made possible by the open source software used in our [server](!https://github.com/matterfoss/matterfoss-server/blob/master/NOTICE.txt), [desktop](!https://github.com/matterfoss/desktop/blob/master/NOTICE.txt) and [mobile](!https://github.com/matterfoss/matterfoss-mobile/blob/master/NOTICE.txt) apps."
          id="about.notice"
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        <Nbsp />
        abcdef1234567890
        <br />
        <MemoizedFormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        <Nbsp />
        0123456789abcdef
        <br />
        <MemoizedFormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
        <Nbsp />
        0a1b2c3d4f
      </p>
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        <Nbsp />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should match snapshot for team edition 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "MatterFOSS",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MatterFOSSLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          <strong>
            MatterFOSS
             
            <MemoizedFormattedMessage
              defaultMessage="Team Edition"
              id="about.teamEditiont0"
            />
          </strong>
        </h3>
        <p
          className="about-modal__subtitle pb-2"
        >
          <MemoizedFormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <MemoizedFormattedMessage
              defaultMessage="MatterFOSS Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               3.6.2
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Database Schema Version:"
              id="about.dbversion"
            />
            <span
              id="dbversionString"
            >
               77
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Database:"
              id="about.database"
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <MemoizedFormattedMessage
          defaultMessage="Join the MatterFOSS community at "
          id="about.teamEditionLearn"
        />
        <a
          href="https://matterfoss.com/community/"
          rel="noopener noreferrer"
          target="_blank"
        >
          matterfoss.com/community/
        </a>
      </div>
      <div
        className="form-group"
      >
        <div
          className="about-modal__copyright"
        >
          <MemoizedFormattedMessage
            defaultMessage="Copyright 2015 - {currentYear} MatterFOSS, Inc. All rights reserved"
            id="about.copyright"
            values={
              Object {
                "currentYear": 2017,
              }
            }
          />
        </div>
        <div
          className="about-modal__links"
        >
          <a
            href="https://matterfoss.com/terms-of-use/"
            id="tosLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <MemoizedFormattedMessage
              defaultMessage="Terms of Use"
              id="about.tos"
            />
          </a>
           - 
          <a
            href="https://matterfoss.com/privacy-policy/"
            id="privacyLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <MemoizedFormattedMessage
              defaultMessage="Privacy Policy"
              id="about.privacy"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="about-modal__notice form-group pt-3"
    >
      <p>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="MatterFOSS is made possible by the open source software used in our [server](!https://github.com/matterfoss/matterfoss-server/blob/master/NOTICE.txt), [desktop](!https://github.com/matterfoss/desktop/blob/master/NOTICE.txt) and [mobile](!https://github.com/matterfoss/matterfoss-mobile/blob/master/NOTICE.txt) apps."
          id="about.notice"
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        <Nbsp />
        abcdef1234567890
        <br />
        <MemoizedFormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        <Nbsp />
        <br />
        <MemoizedFormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
        <Nbsp />
        0a1b2c3d4f
      </p>
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        <Nbsp />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should show ci if a ci build 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "MatterFOSS",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MatterFOSSLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          <strong>
            MatterFOSS
             
            <MemoizedFormattedMessage
              defaultMessage="Team Edition"
              id="about.teamEditiont0"
            />
          </strong>
        </h3>
        <p
          className="about-modal__subtitle pb-2"
        >
          <MemoizedFormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <MemoizedFormattedMessage
              defaultMessage="MatterFOSS Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               ci
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Database Schema Version:"
              id="about.dbversion"
            />
            <span
              id="dbversionString"
            >
               77
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Build Number:"
              id="about.buildnumber"
            />
            <span
              id="buildnumberString"
            >
               123
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Database:"
              id="about.database"
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <MemoizedFormattedMessage
          defaultMessage="Join the MatterFOSS community at "
          id="about.teamEditionLearn"
        />
        <a
          href="https://matterfoss.com/community/"
          rel="noopener noreferrer"
          target="_blank"
        >
          matterfoss.com/community/
        </a>
      </div>
      <div
        className="form-group"
      >
        <div
          className="about-modal__copyright"
        >
          <MemoizedFormattedMessage
            defaultMessage="Copyright 2015 - {currentYear} MatterFOSS, Inc. All rights reserved"
            id="about.copyright"
            values={
              Object {
                "currentYear": 2017,
              }
            }
          />
        </div>
        <div
          className="about-modal__links"
        >
          <a
            href="https://matterfoss.com/terms-of-use/"
            id="tosLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <MemoizedFormattedMessage
              defaultMessage="Terms of Use"
              id="about.tos"
            />
          </a>
           - 
          <a
            href="https://matterfoss.com/privacy-policy/"
            id="privacyLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <MemoizedFormattedMessage
              defaultMessage="Privacy Policy"
              id="about.privacy"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="about-modal__notice form-group pt-3"
    >
      <p>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="MatterFOSS is made possible by the open source software used in our [server](!https://github.com/matterfoss/matterfoss-server/blob/master/NOTICE.txt), [desktop](!https://github.com/matterfoss/desktop/blob/master/NOTICE.txt) and [mobile](!https://github.com/matterfoss/matterfoss-mobile/blob/master/NOTICE.txt) apps."
          id="about.notice"
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        <Nbsp />
        abcdef1234567890
        <br />
        <MemoizedFormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        <Nbsp />
        <br />
        <MemoizedFormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
        <Nbsp />
        0a1b2c3d4f
      </p>
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        <Nbsp />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should show dev if this is a dev build 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "MatterFOSS",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MatterFOSSLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          <strong>
            MatterFOSS
             
            <MemoizedFormattedMessage
              defaultMessage="Team Edition"
              id="about.teamEditiont0"
            />
          </strong>
        </h3>
        <p
          className="about-modal__subtitle pb-2"
        >
          <MemoizedFormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <MemoizedFormattedMessage
              defaultMessage="MatterFOSS Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               dev
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Database Schema Version:"
              id="about.dbversion"
            />
            <span
              id="dbversionString"
            >
               77
            </span>
          </div>
          <div>
            <MemoizedFormattedMessage
              defaultMessage="Database:"
              id="about.database"
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <MemoizedFormattedMessage
          defaultMessage="Join the MatterFOSS community at "
          id="about.teamEditionLearn"
        />
        <a
          href="https://matterfoss.com/community/"
          rel="noopener noreferrer"
          target="_blank"
        >
          matterfoss.com/community/
        </a>
      </div>
      <div
        className="form-group"
      >
        <div
          className="about-modal__copyright"
        >
          <MemoizedFormattedMessage
            defaultMessage="Copyright 2015 - {currentYear} MatterFOSS, Inc. All rights reserved"
            id="about.copyright"
            values={
              Object {
                "currentYear": 2017,
              }
            }
          />
        </div>
        <div
          className="about-modal__links"
        >
          <a
            href="https://matterfoss.com/terms-of-use/"
            id="tosLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <MemoizedFormattedMessage
              defaultMessage="Terms of Use"
              id="about.tos"
            />
          </a>
           - 
          <a
            href="https://matterfoss.com/privacy-policy/"
            id="privacyLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <MemoizedFormattedMessage
              defaultMessage="Privacy Policy"
              id="about.privacy"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="about-modal__notice form-group pt-3"
    >
      <p>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="MatterFOSS is made possible by the open source software used in our [server](!https://github.com/matterfoss/matterfoss-server/blob/master/NOTICE.txt), [desktop](!https://github.com/matterfoss/desktop/blob/master/NOTICE.txt) and [mobile](!https://github.com/matterfoss/matterfoss-mobile/blob/master/NOTICE.txt) apps."
          id="about.notice"
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        <Nbsp />
        abcdef1234567890
        <br />
        <MemoizedFormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        <Nbsp />
        <br />
        <MemoizedFormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
        <Nbsp />
        0a1b2c3d4f
      </p>
      <p>
        <MemoizedFormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        <Nbsp />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;
